tests/errors/lexer/comments.lex
# this is an inline comment


##
This is a multiline comment.
This is definitely a multiline comment.
##